src/objects/Delivery_Item__c.object
<CustomObject>
    <label>Delivery Item</label>
    <nameField>
        <label>Delivery Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Expiration_Date__c</fullName>
        <label>Food Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Food_Storage__c</fullName>
        <label>Food Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-refrigerated</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
                <value>
                    <fullName>Refrigerated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>